[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Gui/DialogueBox/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/2D/Gui/DialogueBox/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/2D/Gui/DialogueBox/CharacterProfile/Carbon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/DePixelSchmal.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/2D/Gui/DialogueBox/InputArrow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 230, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 230, 43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Bounce"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InputArrow:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 112, 48 ), Vector2( 112, 53 ), Vector2( 112, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InputArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InputArrow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InputArrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -112.0
rect_scale = Vector2( 1, 1e-05 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HSplitContainer" type="GridContainer" parent="TextureRect/MarginContainer"]
margin_right = 220.0
margin_bottom = 33.0
columns = 3

[node name="CharacterProfileLeft" type="TextureRect" parent="TextureRect/MarginContainer/HSplitContainer"]
margin_right = 40.0
margin_bottom = 33.0
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/MarginContainer/HSplitContainer"]
margin_left = 44.0
margin_right = 176.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
text = "The end is near"
fit_content_height = true
scroll_active = false

[node name="CharacterProfileRight" type="TextureRect" parent="TextureRect/MarginContainer/HSplitContainer"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 20, 0 )
texture = ExtResource( 3 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CharacterTimer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="DialogueTimer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="InputArrow" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = -15.9999
texture = ExtResource( 5 )

[node name="ArrowAnimation" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="timeout" from="CharacterTimer" to="." method="_on_CharacterTimer_timeout"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
